# spbu-hpc

./: CMakeLists.txt  README.md  main.cpp
MPI/: CMakeLists.txt
MPI/t1/: t1.c
MPI/t2/: t2.c  test.py  vec1.txt  vec2.txt
MPI/t3/: t3.c
MPI/t4/: t4.c  test.py
MPI/t6/: t6.c
MPI/t8/: t8.c
OpenMP/: task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h
OpenMP/data/: t4_data.txt
OpenMP/data/task1/: graphics.py  t1_results.txt
OpenMP/data/task2/: graphics.py  t2_results.txt
OpenMP/data/task3/: graphics.py  t3_results.txt
OpenMP/data/task4/: graphics.py  t4_results.txt
OpenMP/data/task5/: graphics.py  t5_results.txt
OpenMP/data/task6/: graphics.py  t6_results.txt
OpenMP/data/task7/: t7_results.txt
OpenMP/data/task8/: t8_results.txt
OpenMP/data/task9/: graphics.py  t9_results.txt
OpenMP/src/: t2_data1.txt  t2_data2.txt
OpenMP/utils/: DefiniteIntegral.h  ScalarProduct.cpp  ScalarProduct.h  maximin.h  randVecs.cpp  randVecs.h  randomisedFuncs.h  ranndomisedFuncs.h.cpp  vectorMax.cpp  vectorMax.h  vectorMin.cpp  vectorMin.h
utils/: fileio.h  tester.h  timer.h
